<resources>

        <string name="app_name">Car Rental</string>
        <string name="logo_desc">App Logo</string>
        <string name="menu_icon_desc">Menu Icon</string>
        <string name="main_banner_desc">Main Banner</string>
        <string name="tagline">Find Your Perfect Ride</string>
        <string name="sign_in">Sign In</string>
        <string name="register">Register</string>
        <string name="search_hint">Search for cars by model, location, or type</string>
        <string name="featured_car_desc">Featured Car</string>
        <string name="download_google_play">Download on Google Play</string>
        <string name="download_app_store">Download on App Store</string>
        <string name="facebook_icon_desc">Facebook Icon</string>
        <string name="twitter_icon_desc">Twitter Icon</string>

</resources>
