<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D3B40"
    tools:context=".HomePage">


    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="68dp"
        android:background="#BFCFE7"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/tagline"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagline"
        android:layout_marginTop="132dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#525CEB"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:backgroundTint="#525CEB"
            android:text="@string/register" />
    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_bar"
        android:padding="16dp"
        android:visibility="gone">

    </HorizontalScrollView>


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:hint="@string/search_hint"
        android:padding="16dp"
        android:textColor="#F3EDED"
        android:textColorHint="#F1EDED" />

</RelativeLayout>
